fixed languageSelect component overflow on mobile devices

--- a/src/customCss/languageSelect.css
+++ b/src/customCss/languageSelect.css
@@ -75,3 +75,10 @@
         min-width: 100%;
     }
 }
+
+@media (max-width:499px) {
+    .language-modal-header{
+        margin-top: 15rem;
+       
+    }
+}
